# SVC16

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: all_colors.svc16  input_test.svc16  input_tester.svc16  rectavoider.svc16  sound_demo.svc16
specification/: specification.typ  specification.typst
src/: cli.rs  engine.rs  main.rs  utils.rs
