[package]
name = "svc16"
version = "0.4.2"
edition = "2021"
authors = ["Jan Neuendorf"]
description = "An emulator for a simple virtual computer"
license="MIT"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
# There seems to be some incompatibility with the latest crates.io version of pixels?
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "d4df286"} 
thiserror = "2.0.3"
winit = "0.29.15"
winit_input_helper = "0.16.0"
